# molai

./: LICENSE  README.md  note.txt  pyproject.toml  test.py
examples/: demo.py  train_generator.py
molai/: __init__.py
molai/application/: __init__.py  __init__py  constraints.py  filter.py  generate.py  score.py
molai/data/: __init__.py  dataset.py  smiles.py
molai/features/: __init__.py  descriptors.py  fingerprints.py
molai/models/: __init__.py  latent.py  lstm.py  vae.py
molai/pipelines/: __init__.py  generate_filter.py  qsar.py  rl_optimize.py  vae_latent_opt.py
molai/training/: __init__.py  generation.py  rl.py  supervised.py
