[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molai"
version = "0.1.0"
description = "SMILES-based molecular AI: prediction, generation, RL optimization"
authors = [{name="Your Name"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "rdkit-pypi",
    "tqdm",
    "shap"
]

